# rust-todomvc

./: .gitignore  Cargo.toml  Makefile  README.md  emcc
.cargo/: config
docs/: index.html  webplatform.js
rust-mustache/: .travis.yml  Cargo.toml  LICENSE  README.md
rust-mustache/src/: builder.rs  compiler.rs  encoder.rs  lib.rs  parser.rs  template.rs
rust-mustache/src/test-data/: base.mustache  test.mustache
rust-url/: Cargo.toml
rust-url/src/: lib.rs
src/: main.rs  template-page.html  template-todo.html
static/: todomvc.js  todomvc.js.mem
tools/: publish-site.sh
