[package]

name = "todomvc"
version = "0.0.1"
license = "MIT"
description = "APIs for the web platform for cross-compiled Rust to JS."
authors = ["Tim Cameron Ryan <tim@timryan.org>"]

[[bin]]

name = "todomvc"

[dependencies]
libc = "0.1.3"
rustc-serialize = "0.3.1"

[dependencies.rust-mustache]
path = "rust-mustache"

[dependencies.concat_bytes]
path = "concat_bytes"
version = "0.1.0"

[dependencies.webplatform]
path = "../rust-webplatform"
version = "0.1.2"
